name:                lens-misc
version:             0.0.2.0
synopsis:            Handy functions when using lens
description:         Handy functions when using lens
homepage:            https://github.com/louispan/lens-misc#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2017 Louis Pan
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Control.Lens.Misc
  build-depends:       base >= 4.7 && < 5
                     , lens >= 4
                     , template-haskell >= 2.11.0.0
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/lens-misc
