name:                lens-misc
version:             0.0.2.0
synopsis:            Miscellaneous lens utilities.
description:         Handy functions when using lens.
homepage:            https://github.com/louispan/lens-misc#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2017 Louis Pan
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Control.Lens.Misc
                     , Control.Lens.Tagged.Misc
                     , Control.Lens.TH.Misc
                     , Control.Lens.Zoom.Misc
                     , Data.Map.Lens.Misc
  build-depends:       base >= 4.7 && < 5
                     , alternators >= 2.0
                     , lens >= 4
                     , newtype-generics >= 0.5
                     , tagged >= 0.8
                     , template-haskell >= 2.11.0.0
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/lens-misc
